# MyFinances

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: backend.yml  frontend.yml  mcp.yml  pdf-parsing.yml
backend/: package-lock.json  package.json  tsconfig.json
backend/src/: config.ts  database.ts  errors.ts  server.ts  swagger.json
backend/src/controllers/: assetTargetController.ts  authController.ts  capitalGainsController.ts  chatgptController.ts  cryptoController.ts  emailIntegrationsController.ts  epfController.ts  expenseController.ts  expenseTransactionController.ts  fixedDepositsController.ts  goldController.ts  index.ts  inflationsController.ts  ingestController.ts  mutualFundsController.ts  mutualFundsInfoController.ts  recurringDepositsController.ts  stocksController.ts  userGoalsController.ts  webhookController.ts
docs/: CoinDCX_Integration.md  CoinDCX_Integration_Guide.md
frontend/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/scripts/: sort-ts-interfaces.js
frontend/src/: custom-typings.d.ts
mcp-server/: .env.example  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
mcp-server/src/: aggregations.ts  auth.ts  backendClient.ts  compact.ts  index.ts  logger.ts  oauth.ts
pdf-parsing/: .dockerignore  Cargo.toml  Dockerfile
pdf-parsing/src/: error.rs  main.rs  models.rs  state.rs  worker.rs
pdf-parsing/src/parsers/: cdsl.rs  epf.rs  mod.rs  safegold.rs  safegoldinvoice.rs
scripts/: README.md  deploy-check.js  deploy.js  prettier-auto.js
(+305 files in other folders)
