[package]
name = "pdf-parsing"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing-appender = "0.2"
dashmap = "5"
thiserror = "1"
pdf-extract = "0.7"
regex = "1"
