[package]
name = "pdf-parsing"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
tower-http = { version = "0.5", features = ["cors"] }
dashmap = "5"
thiserror = "1"
pdf-extract = "0.7"
regex = "1"
lopdf = "0.32"
rayon = "1"
rust_src = "0.0.0"
